--- a/.github/workflows/glitch_pinger.yaml
+++ b/.github/workflows/glitch_pinger.yaml
@@ -1,8 +1,8 @@
 name: 🎏 Glitch Pinger 🏓🌊🔎
 on:
   workflow_dispatch: # Whenever manually run from actions-tab
-  schedule:
-    - cron: "*/35 * * * *" #Every 35 Mins
+  #schedule:
+  #  - cron: "*/35 * * * *" #Every 35 Mins
 #------------------------------------------------------------------------------------#  
 jobs:
   Ping:
